- added cam Command to turn Players to Cam Players - added death counter - other small improvements

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -23,3 +23,6 @@ commands:
   status:
     description: Damit kannst du deinen Status festlegen.
     usage: <Status>
+  cam:
+    description: Mit diesem Command können Cam Accounts festgelegt werden.
+    permission: op
